# EnergyFaultDetector

./: .coveragerc  .dockerignore  .gitignore  LICENSE  MANIFEST.in  README.md  asset_dataset_splitter.py  energy_fault_detector.main.html  pre-process.py  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  run.py  run_bulk_train.py  run_predict.py  setup.py
docker/: Dockerfile.api  docker-compose.local.yml  mongo-init.js
docs/: api_quickstart.md  conf.py  config_example.yaml  service_startup.md  usage_examples.rst
energy_fault_detector/: ABOUT  __init__.py  _logs.py  base_config.yaml  c2c_options.yaml  fault_detector.py  logging.yaml  main.py  registration.py
notebooks/: CARE to Compare.ipynb  Example - AnomalyDetector Usage.ipynb  Example - Create new model classes.ipynb  Example - Hyperparameter Optimization.ipynb  Example - Model Finetuning.ipynb  Example - Quick Failure Detection.ipynb
scripts/: predict_farm_c.ps1  predict_farm_c.sh  run_api.ps1  run_api.sh  sample_api_client.py  setup_docker_local.ps1  setup_docker_local.sh  setup_mongodb_local.ps1  setup_mongodb_local.sh  start_services.ps1  start_services.sh  start_webhooks.ps1  start_webhooks.sh  webhook_anomalies.py  webhook_criticality.py  webhook_events.py  webhook_narrative.py  webhook_root_cause.py  webhook_server_base.py
tests/: test_fault_detector.py  test_logging.yaml  test_model_registry.py  test_quick_fault_detector_rca.py  test_registration.py  test_root_cause_ignore_features.py
web-service/: Dockerfile  package.json
web-ui/: .eslintrc.cjs  (+5 more)
(+136 files in other folders)
